[package]
name = "bwbio"
version = "0.1.0"
authors = ["Aalivexy <aalivexy@outlook.com>"]
edition = "2024"
description = "A lightweight, native handler for the Bitwarden browser extension's biometric authentication."
readme = "README.md"
repository = "https://github.com/Aalivexy/bwbio"
license = "GPL-3.0-or-later"

[dependencies]
aes = "0.8"
anyhow = "1"
argh = "0.1"
base64 = "0.22"
cbc = { version = "0.1", features = ["std"] }
hmac = "0.12"
rand = "0.9"
rsa = "0.10.0-rc.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.11.0-rc.0"
sha2 = "0.10"
subtle = "2"
windows = { version = "0.61", features = [
  "Security_Credentials_UI",
  "Win32_Security_Cryptography",
  "Win32_System_Threading",
  "Win32_System_WinRT",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
] }
windows-future = "0.2"
windows-strings = "0.4"

[profile.release]
strip = true
lto = true
